syntax = "proto3";
package knowing;

service RegionHandler {
    rpc GetListenAudio (FindRequest) returns (HasOptionResponse);
}

message FindRequest {
    repeated string tokens = 1;
    string articleId = 2;
}

message HasOptionResponse {
    repeated HasOption Items = 1;
}

message HasOption {
    string token = 1;
    int64 listen = 2;
}